Added events by month and more backend documentation.
